2016-11-08  Jérôme Pasquier  <rainbru@free.fr>

	* .travis-ci: add allow_failures for clang.
	* README.md: add travis-ci build image.

2016-11-07  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/MainMenu.cpp (hudUpdate): update text in stats buffer.
	* src/client/GameEngine.cpp (getRendererWindow): new getter.

	* src/client/GameEngine.cpp (overlayHandler): call hudUpdater()
	of current game state every second.
	* src/client/GameState.cpp (hudUpdate): override empty function.
	* src/client/MainMenu.hpp (hudUpdate): new empty member function.

	* src/client/GameState.cpp (drawOverlay): handle mFpsGeometry.
	* src/client/GameEngine.cpp (mFpsGeometry): remove all occurences.

	* src/client/GameState.cpp (drawOverlay): handle mVersionGeometry.
	* src/client/GameEngine.cpp (mVersionGeometry): remove all occurences.

2016-11-05  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (mLogoGeometry): remove all occurences.
	* src/client/GameState.cpp (enter): create mLogoGeometryBuffer here.
	* src/client/GameState.cpp (drawOverlay): override game state function.
	* src/client/MainMenu.hpp (mLogoGeometry): new member definition
	here.
	* src/client/GameEngine.hpp (getOgreRenderer): new getter added.
	* src/client/GameEngine.cpp (overlayHandler): call the
	* src/client/GameEngine.cpp (overlayHandler): call the
	GameState::drawOverlay function for actual game state.
	* src/client/GameState.cpp (drawOverlay): implement an empty virtual
	callback.

2016-11-04  Jérôme Pasquier  <rainbru@free.fr>

	* ROADMAP: create a new 'client work/game state' section.
	* src/client/GameEngine.cpp: remoev NyiDialog header inclusion.
	* src/client/MainMenu.cpp (onOptions): move GameEngine's function
	here.

	* src/client/MainMenu.cpp (onNetworkPlay): use a NyiDialog.

	* src/client/GameEngine.cpp (onLocalTest): move to MainMenu.cpp.

2016-11-02  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameState.cpp (onExit): peacefully shutdown GameEngine.