@@ -12,9 +12,6 @@ matrix:
 branches:
   only:
     - master
-matrix:
-  allow_failures:
-  - rvm: 1.9.3
 env:
   global:
    # The next declaration is the encrypted COVERITY_SCAN_TOKEN, created
